--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
             {
             font-family: 'Roboto', cursive;
             color: white;
-           background-color: #1c1c1c;
+           background-color: #282828;
             /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur.jpg'); */
             /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_02.jpg'); */
             /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_03.jpg'); */
