--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,77 @@
-        @charset "UTF-8";
-        
-        /* Main
+@charset "UTF-8";
+
+/* Main
         --------------------------------------------------------------------------------------- */
 
-        /* font-family: 'Montserrat', sans-serif;
+/* font-family: 'Montserrat', sans-serif;
         font-family: 'Montserrat Alternates', sans-serif;
         font-family: 'Montserrat Subrayada', sans-serif;
         font-family: 'Righteous', cursive; */
 
-        body 
-            {
-            font-family: 'Roboto', cursive;
-            color: white;
-           background-color: #282828;
-            /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur.jpg'); */
-            /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_02.jpg'); */
-            /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_03.jpg'); */
-            /* background: url('../images/pattern-overlay.png') repeat; */
-            margin: 0px
-            }
-        
-            object, img {
-                max-height: 68%;
-                max-width: 68%;
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-                border: 0px solid rgb(255,255,255);
-            }
+body {
+  font-family: 'Roboto', cursive;
+  color: white;
+  background-color: #282828;
+  /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur.jpg'); */
+  /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_02.jpg'); */
+  /*background: url('../images/fruit_allsorts_pineapple_melon_grapes_orange_tangerine_kiwi_apples_basket_43780_1920x1080_blur_03.jpg'); */
+  /* background: url('../images/pattern-overlay.png') repeat; */
+  margin: 0;
+}
+
+img,
+object {
+  max-height: 68%;
+  max-width: 68%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: 0 solid rgb(255,255,255);
+}
+
+#horizon
+{
+color: #009966;
+/*    background-color: white;
+*/    text-align: center;
+position: absolute;
+top: 50%;
+left: 0px;
+width: 100%;
+height: 1px;
+overflow: visible;
+visibility: visible;
+display: block
+}
+
+#content
+{
+/*font-family: Verdana, Geneva, Arial, sans-serif;*/
+/*    background-color: #336699;
+*/    margin-left: -400px;
+position: absolute;
+/*top: -45px;*/
+top: -68px;
+left: 50%;
+width: 800px;
+height: 56px;
+visibility: visible
+}
+
+.bodytext 
+{
+font-size: 14px
+}
+
+.style18 {color: #3169B6}
+
+.style3 {
+    /*font-family: Verdana, Arial, Helvetica, sans-serif; */
+    font-size: 68px;
+    font-weight: bold; 
+    letter-spacing: 8px;
+    color: white;
+    }
